[gd_scene load_steps=2 format=3 uid="uid://2ujmsckvisou"]

[ext_resource type="Script" path="res://scenes/maps/mapcontroller.gd" id="1_2vx8w"]

[node name="MapController" type="Node2D"]
script = ExtResource("1_2vx8w")

[node name="SelectMap" type="OptionButton" parent="."]
offset_right = 45.0
offset_bottom = 20.0

[connection signal="item_selected" from="SelectMap" to="." method="_on_select_map_item_selected"]
